--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Document</title>
   </head>
   <body>
@@ -19,7 +19,7 @@
       </nav>
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
     <!-- Hero img -->
@@ -63,5 +63,17 @@
           </li>
         </ul>
       </section>
+      <!-- Section 2 -->
+      <section>
+<h2>What are we doing</h2>
+<ul>
+    <li><img src="./images/rectangle71.jpg" alt="Display with statistics"></li>
+    <li><img src="./images/rectangle71-1.jpg" alt="Multitasking smartphone"></li>
+    <li><img src="./images/rectangle71-2.jpg" alt="Smartphone in hands amd laptop"></li>
+</ul>
+
+
+      </section>
+      
 </body>
 </html>
