--- a/index.html
+++ b/index.html
@@ -7,137 +7,140 @@
     <title>Студія</title>
   </head>
   <body>
-    <!-- Header and nav -->
     <header>
       <nav>
-        <a href="/index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
-    <!-- Hero section-->
-    <div>
+    <main>
+      <!-- Hero section-->
+      <div>
+        <section>
+          <h1>Effective Solutions for Your Business</h1>
+          <button type="button">Order Service</button>
+        </section>
+      </div>
+      <!-- /Hero section -->
+      <!-- Section 1 -->
       <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h2>Webstudio features</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
-    </div>
-    <!-- /Hero section -->
-    <!-- Section 1 -->
-    <section>
-      <h2>Webstudio features</h2>
-      <ul>
-        <li>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
-    </section>
-    <!-- /Section 1 -->
-    <!-- Section 2 -->
-    <section>
-      <h2>What are we doing</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/our-work1.jpg"
-            alt="Display with statistics"
-            width="264"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/our-work1-1.jpg"
-            alt="Multitasking smartphone"
-            width="264"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/our-work1-2.jpg"
-            alt="Smartphone in hands amd laptop"
-          />
-        </li>
-      </ul>
-    </section>
-    <!-- /Section2 -->
-    <!-- Section 3 -->
-    <section>
-      <h2>Our Team</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/our-team-img.jpg"
-            alt="Our Product Designer"
-            width="264"
-          />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </li>
-        <li>
-          <img
-            src="./images/our-team-img1.jpg"
-            alt="Our Frontend Developer"
-            width="264"
-          />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img
-            src="./images/our-team-img2.jpg"
-            alt="Our Marketer"
-            width="264"
-          />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/our-team-img3.jpg"
-            alt="Our UI Designer"
-            width="264"
-          />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
-    </section>
-    <!-- /Section 3 -->
+      <!-- /Section 1 -->
+      <!-- Section 2 -->
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/our-work1.jpg"
+              alt="Display with statistics"
+              width="264"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/our-work1-1.jpg"
+              alt="Multitasking smartphone"
+              width="264"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/our-work1-2.jpg"
+              alt="Smartphone in hands amd laptop"
+            />
+          </li>
+        </ul>
+      </section>
+      <!-- /Section2 -->
+      <!-- Section 3 -->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/our-team-img.jpg"
+              alt="Our Product Designer"
+              width="264"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-team-img1.jpg"
+              alt="Our Frontend Developer"
+              width="264"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-team-img2.jpg"
+              alt="Our Marketer"
+              width="264"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-team-img3.jpg"
+              alt="Our UI Designer"
+              width="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!-- /Section 3 -->
+    </main>
     <!-- Footer -->
     <footer>
-      <a href="/index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
