--- a/index.html
+++ b/index.html
@@ -74,21 +74,25 @@
           <li>
             <img
               src="./images/our-work1.jpg"
-              alt="Display with statistics"
-              width="264"
+              alt="Working"
+              width="360"
+              height="300"
             />
           </li>
           <li>
             <img
               src="./images/our-work1-1.jpg"
-              alt="Multitasking smartphone"
-              width="264"
+              alt="Working"
+              width="360"
+              height="300"
             />
           </li>
           <li>
             <img
               src="./images/our-work1-2.jpg"
-              alt="Smartphone in hands amd laptop"
+              alt="Working"
+              width="360"
+              height="300"
             />
           </li>
         </ul>
@@ -103,6 +107,7 @@
               src="./images/our-team-img.jpg"
               alt="Our Product Designer"
               width="264"
+              height="260"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
@@ -112,6 +117,7 @@
               src="./images/our-team-img1.jpg"
               alt="Our Frontend Developer"
               width="264"
+              height="260"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
@@ -121,6 +127,7 @@
               src="./images/our-team-img2.jpg"
               alt="Our Marketer"
               width="264"
+              height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -130,6 +137,7 @@
               src="./images/our-team-img3.jpg"
               alt="Our UI Designer"
               width="264"
+              height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
